<resources>
    <string name="app_name">Simple Wallpaper</string>
    <string name="toast_sensor_error">Sorry! This device does not support Rotation Vector Sensor.</string>
    <string name="toast_failed_launch_wallpaper_chooser">Couldn\'t launch wallpaper chooser. You can still activate App Parallax by choosing \"Live Wallpapers\" in your home screen wallpaper picker.</string>
    <string name="range">RANGE</string>
    <string name="delay">SPEED</string>
    <string name="scroll">Wallpaper scrolling</string>
    <string name="power_save">Pause in battery saver mode</string>
    <string name="introduction2">
        <![CDATA[
            This App can produce a parallax effect by slightly offsetting the position of the wallpaper.<br>
            *It is required to obtain the device\'s rotation angle data from <b>Rotation Vector Sensor</b> in real time. You can check whether your device supports the sensor by rotating the device and seeing whether the cube below changes its perspective.
        ]]>
    </string>


    <string name="confirm_exit">Exit Application!</string>
    <string name="confirm_exit_">Thank you for using this app, please support us by giving a review or sharing the app.</string>
    <string name="yes">Exit</string>
    <string name="rate">Rate Us</string>
    <string name="failedSetting">Before using the effect, please select a set wallpaper</string>
    <string name="admobappid">ca-app-pub-3940256099942544~3347511713</string>
    <string name="sdk_key_applovin">T7PPns0K6JV00uGv0ZAEKsTWrpwA-N4Hchi_KKecaqTa_U5zQcyyoI_pTcC5TM1OgfrLz5dWGdASKWgK6l5Sks</string>
    <string name="shareit">Download best parallax wallpaper on Playstore </string>
    <string name="wrong_pn">AplicationID Salah!</string>
    <string name="wrong_pn_description">Silahkan lakukan enkripsi ulang di website aliendroid dengan AplicationID yang benar.</string>

</resources>