<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgExit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:background="#00000000"
                app:srcCompat="@drawable/baseline_close_24x" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/confirm_exit"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/layAds"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgOpen"
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/dialogads" />

                <RelativeLayout
                    android:id="@+id/layAds2"
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:layout_centerInParent="true">

                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/confirm_exit_"
                android:textColor="@color/menu_bar2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/tbYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@color/menu_bar1"
                    android:text="@string/yes"
                    android:textColor="@color/actionbar_text" />

                <Button
                    android:id="@+id/tbRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:background="@color/menu_bar1"
                    android:text="@string/rate"
                    android:textColor="@color/actionbar_text" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>