<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/introduction_horizontal_margin"
                    android:layout_marginRight="@dimen/introduction_horizontal_margin"
                    android:fontFamily="sans-serif-condensed" />

                <com.simplewallpaper.parallaxwallpaper.parallax.Cube
                    android:id="@+id/cube"
                    android:layout_width="@dimen/cube_size"
                    android:layout_height="@dimen/cube_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/cube_margin" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/divider_vertical_margin"
                    android:layout_marginBottom="@dimen/divider_vertical_margin"
                    android:background="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/settings_item_horizontal_margin"
                    android:layout_marginRight="@dimen/settings_item_horizontal_margin"
                    android:stretchColumns="1"
                    android:visibility="visible">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/settings_item_height"
                            android:layout_gravity="end"
                            android:gravity="center_vertical"
                            android:text="@string/range"
                            android:textColor="@color/main_layout"
                            android:textStyle="bold" />

                        <SeekBar
                            android:id="@+id/seekBarRange"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:max="20"
                            android:maxHeight="@dimen/settings_item_height"
                            android:minHeight="@dimen/settings_item_height"
                            android:progress="10" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/settings_item_height"
                            android:layout_gravity="end"
                            android:gravity="center_vertical"
                            android:text="@string/delay"
                            android:textColor="@color/main_layout"
                            android:textStyle="bold" />

                        <SeekBar
                            android:id="@+id/seekBarDelay"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:max="20"
                            android:maxHeight="@dimen/settings_item_height"
                            android:minHeight="@dimen/settings_item_height"
                            android:progress="10" />
                    </TableRow>

                    <CheckBox
                        android:id="@+id/checkBoxScroll"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/settings_item_height"
                        android:checked="true"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_vertical"
                        android:text="@string/scroll"
                        android:textColor="@color/main_layout" />

                    <CheckBox
                        android:id="@+id/checkBoxPower"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/settings_item_height"
                        android:checked="true"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_vertical"
                        android:text="@string/power_save"
                        android:visibility="gone" />
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>